# LiGMA

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: semgrep.yml
include/: config.hpp  game_launcher.hpp  i_instance_filesystem.hpp  instance_factory.hpp  instance_filesystem.hpp  ligma_plugin.hpp  native_instance_filesystem.hpp  overlayfs_mount.hpp  plugin_handler.hpp  proton_instance_filesystem.hpp  steam_finder.hpp
plugins/: CMakeLists.txt  balatro.cpp  cp2077.cpp  ligmabalatro.json  ligmacp2077.json  ligmastardew.json  stardew.cpp  testplug.cpp  testplug.hpp  testplug.json
src/: config.cpp  extractor.cpp  game_launcher.cpp  i_instance_filesystem.cpp  instance_filesystem.cpp  main.cpp  native_instance_filesystem.cpp  overlayfs_mount.cpp  plugin_handler.cpp  proton_instance_filesystem.cpp  steam_finder.cpp
src/qt_ui/: add_mod_dialog.cpp  add_mod_dialog.hpp  add_mod_dialog.ui  game_instance.cpp  game_instance.hpp  game_instance.ui  instance_options.cpp  instance_options.hpp  instance_options.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  new_instance_dialog.cpp  new_instance_dialog.hpp  new_instance_dialog.ui
